@@ -1,3 +1,4 @@
+0.92.5-0 @02/22/2005 19:45:00 UTC@
 0.92.4-0 @02/17/2005 23:15:00 UTC@
 0.92.3-0 @02/15/2005 22:10:00 UTC@
 0.92.2-0 @02/06/2005 23:30:00 UTC@
